--- a/mod2/index.html
+++ b/mod2/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Assignment Solution for Module 2</title>
 </head>
-<link rel="stylesheet" href="C:\Users\Lenovo\Desktop\style.css">
+<link rel="stylesheet" href="style.css">
 
 <body>
     <div id="menu">Our Menu</div>
