--- a/mod2/index.html
+++ b/mod2/index.html
@@ -1,46 +1,35 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Assignment Solution for Module 2</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="mod2.css">
+    <title>Assignment Solution For Module 2</title>
 </head>
-<link rel="stylesheet" href="style.css">
-
 <body>
-    <div id="menu">Our Menu</div>
+    <h1 id="menu">Our Menu</h1>
     <div class="boxes">
-        <div class="testbox1">
-            <section class="chicken">
-                <h2>Chicken</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-                </p>
-            </section>
+        <div class="box1">
+            <div id="head1">
+                <p>Chicken</p>
+            </div>
+                <br>
+            <p class="px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
-    </div>
-    <div class="boxes">
-        <div class="testbox2">
-            <section class="beef">
-                <h2>Beef</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-            </section>
+        <div class="box2">
+            <div id="head2">
+                <p>Beef</p>
+            </div>
+            <br>
+            <p class="px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
-    </div>
-    <div class="boxes">
-        <div class="testbox3">
-            <section class="sushi">
-                <h2>Sushi</h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-            </section>
+        <div class="box3">
+            <div id="head3">
+                <p>Sushi</p>
+            </div>
+            <br>
+            <p class="px">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
     </div>
 </body>
-
 </html>
